--- a/EX/homework/homework_02/quiz-2.html
+++ b/EX/homework/homework_02/quiz-2.html
@@ -23,13 +23,11 @@
 
                 if(userNum < 1 || userNum > 45) {
                     alert("입력한 숫자가 범위를 벗어났습니다, 다시 입력하세요.");
-                    checkDuplication = true;
                     i--;
                 }
 
-                if(userNum == String) {
+                if(isNaN(userNum)) {
                     alert("숫자가 아닌 값을 입력했습니다, 다시 입력하세요.");
-                    checkDuplication = true;
                     i--;
                 }
             }
