--- a/EX/04. Array/_02_array_method.html
+++ b/EX/04. Array/_02_array_method.html
@@ -23,7 +23,7 @@
         arr1.sort();
         console.log(arr1);
 
-        // 4. splice(삭제 시작인덱스, 삭제할 요소의 개수, 새로운데이터) 메소드:
+        // 4. splice(삭제할 시작인덱스, 삭제할 요소의 개수, 새로운데이터) 메소드:
         //                  지정된 인덱스부터 지정한 개수만큼 데이터를 삭제하고
         //                  그 위치에 새로운 데이터를 추가해주는 메소드
         //                  새로운 데이터는 ,로 여러개를 지정할 수 있다.
@@ -41,6 +41,12 @@
         //                  원본배열에서 꺼낸 마지막 요소 삭제하는 메소드
         const lastElement = arr1.pop();
         console.log(lastElement);
+        console.log(arr1);
+
+        // 6-1. shift() 메소드: 배열에서 첫번째 요소를 꺼내서 리턴하고 
+        //                  원본배열에서 꺼낸 첫번째 요소 삭제하는 메소드
+        const firstElement = arr1.shift();
+        console.log(firstElement);
         console.log(arr1);
 
         // 7. push(새로운 요소) 메소드: 배열의 마지막에 매개변수로 받아온 새로운 요소를 
